fixed a layout bug in profile navigation / headline

--- a/apparelrow/static/less/profile.less
+++ b/apparelrow/static/less/profile.less
@@ -145,7 +145,6 @@
     }
     .btn-follow, .btn-unfollow, .btn-create-shop {
         display: inline-block;
-        margin-top: -20px;
     }
     .description {
         margin-top: 10px;
@@ -189,6 +188,7 @@
         li {
             padding-right: 10px;
             padding-left: 0;
+            padding-bottom: 10px;
         }
     }
 }
